# attendance-system

./: .env.example  .gitignore  Caddyfile  Caddyfile.example  gunicorn.conf.py  pyproject.toml
deploy/systemd/: axon-attendance-api.service  axon-attendance-caddy.service  axon-attendance-ui.service  axon-attendance-update.service  axon-attendance-update.timer
scripts/: caddy-https.sh  install-kiosk-caddy.sh  install-kiosk-systemd.sh  kiosk-caddy.sh  kiosk-update.sh
src/: camera.py  config.py  schema.py  test_inspireface.py
src/api/: command_stream.py  connectivity.py  enroll.py  enroll_confirm.py  enrollment_state.py  kcc_client.py  people.py  server.py  session.py  sync_sweeper.py
src/core/: enrollment.py  face_recognizer.py  inspireface_engine.py
src/ipc/: socket_client.py  socket_server.py
src/scripts/: bulk_import_people.py
src/ui/: app.py
tests/: test_identity_cache.py  test_utils.py
