[project]
name = "axon-attendance"
version = "0.1.0"
description = "An attendance system for Vicharak Axon using Inspireface SDK"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "opencv-python>=4.11.0.86",
    "requests>=2.31.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "sseclient-py>=1.8.0",
    "inspireface>=1.2.3.post3",
    "pyside6==6.8.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "uuid-extension>=0.2.0",
    "peewee>=3.18.2",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "gunicorn>=23.0.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
